...
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_create_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_create_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email Address"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

...
                    android:background="@drawable/ic_clear_black_24dp"
                    android:visibility="gone" />

            </FrameLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_create_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="50dp"
                android:padding="12dp"
                android:text="Next" />
...
